--- a/projet-3/package.json
+++ b/projet-3/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.14.20",
     "@mui/x-data-grid": "^6.18.3",
     "axios": "^1.6.2",
+    "firebase": "^10.7.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
