--- a/projet-3/package.json
+++ b/projet-3/package.json
@@ -18,9 +18,11 @@
     "@mui/x-data-grid": "^6.18.3",
     "axios": "^1.6.2",
     "firebase": "^10.7.1",
+    "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
